# lite-data-stack-bigquery

./: .env.example  .sqlfluff  README.md  pyproject.toml
.github/workflows/: data-pipeline.yml  dbt-cd-docs.yml  dbt-pr-ci.yml
extraction/: meltano.yml
extraction/scripts/: setup-local.sh
transform/: dbt_project.yml  profiles.yml.example
transform/macros/: ensure_source_datasets.sql
transform/models/: overview.md
transform/models/production/marts/: github_commits.sql  github_commits.yml  github_committers.sql
transform/models/staging/: source_github.yml  stg_github_commits.sql
transform/scripts/: setup-local.sh
